--- a/printing_publisher_system/templates/books/versions.html
+++ b/printing_publisher_system/templates/books/versions.html
@@ -64,8 +64,8 @@
                 <input id="format" name="format" placeholder="例如：16开 / 32开">
             </div>
             <div class="form-group">
-                <label for="pages">页数</label>
-                <input id="pages" name="pages" type="number" min="1" placeholder="页数（可选）">
+                <label for="pages">页数（必填）</label>
+                <input id="pages" name="pages" type="number" min="1" required placeholder="请输入页数">
             </div>
             <div class="form-group">
                 <label for="created_date">版本创建日期</label>
