--- a/printing_publisher_system/templates/tasks/requirements.html
+++ b/printing_publisher_system/templates/tasks/requirements.html
@@ -70,7 +70,7 @@
           </tbody>
         </table>
 
-        {% if task['任务状态'] != '已完成' and task['任务状态'] != '已取消' %}
+        {% if is_print_operator and task['任务状态'] != '已完成' and task['任务状态'] != '已取消' %}
           <div class="card" style="margin-top:12px;">
             <h3>完成任务</h3>
             {% if has_shortage %}
