--- a/printing_publisher_system/templates/inventory/detail.html
+++ b/printing_publisher_system/templates/inventory/detail.html
@@ -12,6 +12,7 @@
         <a href="{{ url_for('index') }}">首页</a>
         <a href="{{ url_for('inventory_overview') }}">库存总览</a>
         <a href="{{ url_for('inventory_materials') }}">材料列表</a>
+        <a href="{{ url_for('inventory_logs') }}">库存日志</a>
     </nav>
 </header>
 
