--- a/printing_publisher_system/templates/inventory/overview.html
+++ b/printing_publisher_system/templates/inventory/overview.html
@@ -12,6 +12,7 @@
             <a href="{{ url_for('index') }}">首页</a>
             <a href="{{ url_for('list_tasks') }}">印刷任务</a>
             <a href="{{ url_for('inventory_overview') }}">库存管理</a>
+            <a href="{{ url_for('inventory_logs') }}">库存日志</a>
         </nav>
     </header>
 
